# orbit-wallpaper

./: CMakeLists.txt  README.md  README.txt  logo_data.h  main.cpp  updater.cpp  wallpaper.cpp  wallpaper_settings.cpp
.github/workflows/: fuck.yml
